fix: :art: fixed overlapping components

--- a/pages/artist/styles.module.css
+++ b/pages/artist/styles.module.css
@@ -1,5 +1,5 @@
 .container {
-  background-color: bisque;
+  background-color: var(--grey);
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -8,9 +8,10 @@
 
 .artist_details_container {
   border: 2px solid black;
-  background: #f3eeee;
+  background: var(--grey);
   width: 100%;
   height: 100%;
+  color: var(--lighthest_blue);
 }
 
 .artist_details {
@@ -30,7 +31,7 @@
   align-items: center;
   font-weight: 600;
   font-size: 20px;
-  color: #acacac;
+  color: var(--lighthest_blue);
   gap: 0.5rem;
 }
 
@@ -79,7 +80,7 @@
 .artist_discography_info {
   display: flex;
   gap: 1rem;
-  height: 70%;
+  height: 55vh;
   padding: 0.5rem;
   width: 100%;
 }
